trying to resolve the problem i've created

--- a/DungeonAndPain/DungeonAndPain/DungeonAndPain.vcxproj.filters
+++ b/DungeonAndPain/DungeonAndPain/DungeonAndPain.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Inventory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="IMagicEffect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Attack.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="EItemType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IMagicEffect.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
