--- a/DungeonAndPain/DungeonAndPain/DungeonAndPain.vcxproj
+++ b/DungeonAndPain/DungeonAndPain/DungeonAndPain.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Creature.cpp" />
     <ClCompile Include="DungeonAndPain.cpp" />
+    <ClCompile Include="IMagicEffect.cpp" />
     <ClCompile Include="Inventory.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Merchant.cpp" />
@@ -146,6 +147,7 @@
     <ClInclude Include="EDamageType.h" />
     <ClInclude Include="EItemType.h" />
     <ClInclude Include="EWeaponType.h" />
+    <ClInclude Include="IMagicEffect.h" />
     <ClInclude Include="Inventory.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="Merchant.h" />
