merchant hérite de crea et plus de character. Big flag magic type implementé

--- a/DungeonAndPain/DungeonAndPain/DungeonAndPain.vcxproj
+++ b/DungeonAndPain/DungeonAndPain/DungeonAndPain.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="ECharacterRace.h" />
     <ClInclude Include="EDamageType.h" />
     <ClInclude Include="EItemType.h" />
+    <ClInclude Include="EMagicType.h" />
     <ClInclude Include="EWeaponType.h" />
     <ClInclude Include="IMagicEffect.h" />
     <ClInclude Include="Inventory.h" />
